website commit ASC3

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="item active">
-        <img src="Brian1.jpg" alt="Los" style="width:600px;" "height:auto;" "text-align:center;">
+        <img src="Brian1.JPG" alt="Los" style="width:600px;" "height:auto;" "text-align:center;">
         <div class="carousel-caption">
           <h3>Currently Attending DePauw University </h3>
          
@@ -75,7 +75,7 @@
       </div>
 
       <div class="item">
-        <img src="fam.jpg" alt="New York" style="width:100%;">
+        <img src="fam.JPG" alt="New York" style="width:100%;">
         <div class="carousel-caption">
           <h3>Family Means Everything To Me</h3>
           
