--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
   </div>
 </nav>
     <div class="container">
-  <img src="Brian2.jpg" class="center" alt="..." width="304" height="300"> 
+  <img src="Brian2.JPG" class="center" alt="..." width="304" height="300"> 
 </div>
 
 
