--- a/index4.html
+++ b/index4.html
@@ -47,7 +47,7 @@
 
 
 
-<h1>Please Use One Of The Ways Below To Contact Me.<img src="sm.png" height="90" width="90">
+<h1>Please Use One Of The Ways Below To Contact Me<img src="sm.png" height="90" width="90">
 </h1>
 
 <h2 class="down">Phone: (973)-619-3007</h2>
